@startuml Power Comparison Classes
package View {
    class View
}
package Controller {
    class App
}
package Model {
    abstract class Connector {
        + {abstract} create(username: str, password: str, timeout: int = 60): Connector
        + {abstract} retrieve_usage(start_date, end_date): list[tuple[datetime, list[float]]]
        + {abstract} {static} get_name(): str
    }
    class Data {
        + Data(username: str): Data
        + hourly_average(start_date, end_date): list[float]
        + append(list[tuple[datetime, list[float]]]): None
    }
    class PowerPlanUtility {
        ' + PowerPlan(rates: list[float]): PowerPlan
        + {static} estimated_cost(rates: list[float] estimated_usage: list[float]): float
    }
    class DefaultValuesUtility {
        ' + {static} get_profiles_dir(): str
        ' + {static} get_analysis_file_path(username: str): str
        ' + {static} get_usage_data_file_path(username: str): str
        ' + {static} get_config_file_path(username: str): str
        ' + {static} get_users(): list[str]
        + {static} get_path(username: str): str
    }
    ' class Config {
    '     + Config(): Config
    '     + from_username(username: str): Config
    '     + save(file_path: str | None = None): None
    '     + get_config_value(connector_name: str, key: str): str
    ' }
}

App --> Connector
' App --> Config
App --> Data
App ..> PowerPlanUtility
App ..> DefaultValuesUtility
Data .> DefaultValuesUtility
' Config .> DefaultValuesUtility
' Connector .> Config